    allows assining a global minimum value to optimization qualities
    (overriding proclamations and declarations).
  * enhancement: closed over variables can be stack-allocated on x86
    and x86-64.
  * performance bug fix: GETHASH and (SETF GETHASH) are once again
    non-consing.
  * optimization: STRING-TO-OCTETS is now up to 60% faster for UTF-8.
  * bug fix: using obsoleted structure instances with TYPEP and
    generic functions now signals a sensible error.
  * bug fix: threads waiting on GET-FOREGROUND can be interrupted.
    (reported by Kristoffer Kvello)
  * bug fix: backtrace construction is now more careful when making
    lisp-objects from pointers on the stack, to avoid creating bogus
    objects that can be seen by the GC.
  * bug fix: defaulting of values in contexts expecting more than 7
    variables now works on x86-64.  (reported by Christopher Laux)
  * bug fix: modifications to packages (INTERN, EXPORT, etc) are now
    thread safe.
  * bug fix: (SETF SYMBOL-PLIST) no longer allows assigning a non-list
    as the property-list of a symbol.
  * bug fix: DEFMETHOD forms with CALL-NEXT-METHOD in the method body,
    in EVAL-WHEN forms with both :COMPILE-TOPLEVEL and :LOAD-TOPLEVEL 
    situations requested, are once again file-compileable.  (reported
    by Sascha Wilde)

changes in sbcl-1.0.7 relative to sbcl-1.0.6:
  * MOP improvement: support for user-defined subclasses of
    SB-MOP:SPECIALIZER has been enhanced.  The experimental interface
    function SB-PCL:MAKE-METHOD-SPECIALIZERS-FORM, called as part of
    the expansion of DEFMETHOD, is responsible for generating a form
    which creates a list of specializers when evaluated.  Additional
    functions SB-PCL:[UN]PARSE-SPECIALIZER-USING-CLASS provide
    debugging and introspective support.
  * minor incompatible change: the (unsupported) spinlock interface
    has changed: free spinlock now has the value NIL, and a held spinlock
    has the owning thread as its value.