@@ -1165,7 +1165,14 @@ is a good idea, but see SB-SYS re. blurring of boundaries."
                "%MAP" "%MAP-TO-SIMPLE-VECTOR-ARITY-1"
                "%MAP-TO-LIST-ARITY-1" "%MAP-TO-NIL-ON-SEQUENCE"
                "%MAP-TO-NIL-ON-SIMPLE-VECTOR" "%MAP-TO-NIL-ON-VECTOR"
-               "%MASK-FIELD" "%NEGATE" "%POW" "%PUTHASH"
+               "%MASK-FIELD"
+               "%MEMBER"
+               "%MEMBER-KEY"
+               "%MEMBER-KEY-TEST"
+               "%MEMBER-KEY-TEST-NOT"
+               "%MEMBER-TEST"
+               "%MEMBER-TEST-NOT"
+               "%NEGATE" "%POW" "%PUTHASH"
                "%RAW-BITS" "%RAW-BITS-WITH-OFFSET" "%VECTOR-RAW-BITS"
                "%RAW-REF-COMPLEX-DOUBLE" "%RAW-REF-COMPLEX-LONG"
                "%RAW-REF-COMPLEX-SINGLE" "%RAW-REF-DOUBLE"
